// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> matches snapshot 1`] = `
<div>
  <div
    class="css-12utew3-radioButtonContainer-radioButtonContainer"
  >
    <input
      id="all"
      type="radio"
      value="all"
    />
    <label
      for="all"
    >
      All
    </label>
  </div>
</div>
`;

exports[`<Radio /> matches snapshot with \`inline = true\` 1`] = `
<div>
  <div
    class="css-ud70d6-radioButtonContainer-radioButtonContainer"
  >
    <input
      id="all"
      type="radio"
      value="all"
    />
    <label
      for="all"
    >
      All
    </label>
  </div>
</div>
`;
